기본 레이아웃 구성

--- a/index_backup.html
+++ b/index_backup.html
@@ -26,35 +26,54 @@
 	<div id="warp" >
 		<!-- 탑 메뉴 -->
 		<div class="top_nav">
-			<div class="container">
-				탑메뉴
+			<div class="">
+
 			</div>
 		</div>
 		<!-- 탑 메뉴 끝 -->
-		<!-- visual  -->
-		<div class="visual">
-			<div class="container">
-				비주얼
-			</div>
-		</div>
-		<!-- visual 끝 -->
-
-		<!-- visual  -->
-		<div class="content_main">
-			<div class="container">
-				내용
-			</div>
-		</div>
-		<!-- visual 끝 -->
 
 
-		<!-- footer  -->
-		<div class="foot">
-			<div class="container">
-				푸터
-			</div>
+
+		<!-- 애니메이션 테스트-->
+		<div class="title-wrap">
+			<h2 class="animate" data-animate="fadeInUp" data-duration="1s" data-delay="0.1s">GGTrading</h2>
 		</div>
-		<!-- footer 끝 -->
+		<!-- 애니메이션 테스트-->
+
+		<!-- Slider main container -->
+		<div class="swiper-container">
+			<!-- Additional required wrapper -->
+			<div class="swiper-wrapper">
+				<!-- Slides -->
+				<div class="swiper-slide">Slide 1</div>
+				<div class="swiper-slide">Slide 2</div>
+				<div class="swiper-slide">Slide 3</div>
+			</div>
+			<!-- If we need pagination -->
+			<div class="swiper-pagination"></div>
+
+			<!-- If we need navigation buttons -->
+			<div class="swiper-button-prev"></div>
+			<div class="swiper-button-next"></div>
+
+		</div>
+		<!-- Slider main container -->
+
+		<!-- Modal HTML embedded directly into document -->
+		<div id="ex1" class="modal">
+		  <p>Thanks for clicking. That felt good.</p>
+		  <a href="#" rel="modal:close">Close</a>
+		</div>
+
+		<!--팝업 테스트-->
+		<div id="test-popup" class="white-popup mfp-hide">
+		  Popup content
+		</div>
+
+		<a href="#test-popup" class="open-popup-link">Show inline popup</a>
+		<!--팝업 테스트-->
+
+
 	</div>
  </body> 
 </html>
