210105 인덱스 작업

--- a/index.html
+++ b/index.html
@@ -121,7 +121,36 @@
 		</div>
 		<!-- visual 끝 -->
 
+		<div class="photo_list">
+			<div class="container">
+				수익인증
+			</div>
+		</div>
 
+		<div class="index_form">
+			<div class="container">
+				급등주 신청폼
+			</div>
+		</div>
+
+		<div class="banner_slide">
+			<div class="container">
+				배너 슬라이드
+			</div>
+		</div>
+
+		<div class="googlemaps">
+			<div class="container">
+				구글맵스
+			</div>
+		</div>
+
+
+		<div class="foot_link">
+			<div class="container">
+				푸터 링크
+			</div>
+		</div>
 		<!-- footer  -->
 		<div class="foot">
 			<div class="container">
