네비기본공사

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 	<link rel="stylesheet" type="text/css" href="css/main.css">
 	<!-- silder -->	
 	<!-- <link rel="stylesheet" href="css/swiper_layout.css"> -->
-	<link rel="stylesheet" href="https://unpkg.com/swiper/css/swiper.min.css">
+	
 	<link rel="stylesheet" href="plugin/swiper/dist/css/swiper.css">
 	<!-- animate -->
 	<link rel="stylesheet" href="css/animate.min.css">
@@ -47,54 +47,44 @@
 		<!--디자인블랙-->
 		<div id="top_gnb">
 			<div class="DB_wrap">
-				<h1><a href="#">LOGO</a></h1>
+				<h1><a href="#"><img src="images/logo.png" alt="logo"/></a></h1>
 				<ul class="DB_main">					
-					<li><a href="#">홍보센터</a></li>
-					<li><a href="#">홍보센터</a></li>
-					<li><a href="#">홍보센터</a></li>
-					<li><a href="#">홍보센터</a></li>
-					<li><a href="#">홍보센터</a></li>
+					<li><a href="#">회사소개</a></li>
+					<li><a href="#">CH고수TV</a></li>
+					<li><a href="#">상품안내</a></li>
+					<li><a href="#">성과인증</a></li>
+					<li><a href="#">고객센터</a></li>
+					<li class="redbox"><a href="#">급등무료체험</a></li>
 				</ul>
 			</div>
 			<div class="DB_mask">
 				<div class="DB_move">
-					
 					<div class="DB_subSet">
 						<ul>
-							<!--텍스트메뉴인 경우-->
-							<li><a href="#">사업개요</a></li>
-							<li><a href="#">산업자재</a></li>
-							<li><a href="#">필름/전자재료</a></li>
-							<li><a href="#">화학</a></li>
-							<li><a href="#">패션</a></li>
+							<li><a href="#">회사소개</a></li>
+							<li><a href="#">기업철학</a></li>
+							<li><a href="#">위험관리체계</a></li>
+							<li><a href="#">솔루션</a></li>
+							<li><a href="#">수상내역</a></li>
+							<li><a href="#">오시는길</a></li>
 						</ul>		
 						<ul>
-							<li><a href="#">R&amp;D개요</a></li>
-							<li><a href="#">연혁</a></li>
-							<li><a href="#">주요성과 및 수상</a></li>
-							<li><a href="#">지적재산권</a></li>
-							<li><a href="#">연구분야</a></li>
+							<li><a href="#">종목분석</a></li>
+							<li><a href="#">경제이슈</a></li>
+							<li><a href="#">시황분석</a></li>
 						</ul>		
 						<ul>
-							<li><a href="#">지배구조</a></li>
-							<li><a href="#">재무정보</a></li>
-							<li><a href="#">자료실</a></li>
-							<li></li>
-							<li></li>
+							<li><a href="#">국내주식</a></li>
+							<li><a href="#">애널리스트 소개</a></li>
+							<li><a href="#">가입안내</a></li>
 						</ul>
 						<ul>
-							<li><a href="#">인재상</a></li>
-							<li><a href="#">인사제도</a></li>
-							<li><a href="#">인재채용</a></li>
-							<li><a href="#">Life Style</a></li>
-							<li></li>
+							<li><a href="#">압도적인 성과</a></li>
+							<li><a href="#">투자 공문인증서</a></li>
+							<li><a href="#">회원 수익 인증</a></li>
 						</ul>
 						<ul>
-							<li><a href="#">CI</a></li>
-							<li><a href="#">보도자료</a></li>
-							<li><a href="#">회사소식</a></li>
-							<li><a href="#">공지사항</a></li>
-							<li></li>
+							<li><a href="#">1:1 문의하기</a></li>
 						</ul>
 						
 					</div>
@@ -107,6 +97,9 @@
 		
 		<!-- visual  -->
 		<div class="visual">
+			<div class="visual_img1">
+
+			</div>
 			<div class="container">
 				비주얼
 			</div>
