--- a/index.html
+++ b/index.html
@@ -133,8 +133,19 @@
 		</div>
 
 		<div class="googlemaps">
+			<div id="map" style="width:100%;height:400px;"></div>
+			<script type="text/javascript" src="https://dapi.kakao.com/v2/maps/sdk.js?appkey=eff4d702bcdf6ae8337ff95f0b6e137c"></script>
+			<script>
+				var container = document.getElementById('map');
+				var options = {
+					center: new kakao.maps.LatLng(33.450701, 126.570667),
+					level: 3
+				};
+		
+				var map = new kakao.maps.Map(container, options);
+			</script>
 			<div class="container">
-				구글맵스
+				
 			</div>
 		</div>
 
