--- a/index.html
+++ b/index.html
@@ -122,13 +122,34 @@
 
 		<div class="index_form">
 			<div class="container">
-				급등주 신청폼
+				<div class="index_form_l">
+					<div class="index_form_l_t1">주식의 절대 고수와 함께하는</div>
+					<div class="index_form_l_t2">급등 유망주<br/>무료 체험 신청하기</div>
+					<div class="index_form_l_t3">압도적인 정보 분석, 조건 없는 무료 체험,<br/>고수경제TV의 무한한 수익 경험을 체감해보세요!</div>
+					<button class="btn-2">Button 2</button>
+
+				</div>
+				<div class="index_form_r">
+aa
+				</div>
 			</div>
 		</div>
 
 		<div class="banner_slide">
 			<div class="container">
-				배너 슬라이드
+				<ul class="slide_banner">
+					<li><a href="#"><img src="images/index_bn_img1.png"></a></li>
+					<li><a href="#"><img src="images/index_bn_img2.png"></a></li>
+					<li><a href="#"><img src="images/index_bn_img3.png"></a></li>
+					<li><a href="#"><img src="images/index_bn_img4.png"></a></li>
+					<li><a href="#"><img src="images/index_bn_img5.png"></a></li>
+					<li><a href="#"><img src="images/index_bn_img6.png"></a></li>
+					<li><a href="#"><img src="images/index_bn_img7.png"></a></li>
+				</ul>
+				<div class="slide_banner_aroow">
+					<div class="index_bn_left"><a href="#"><img src="images/index_bn_left.png"></a></div>
+					<div class="index_bn_right"><a href="#"><img src="images/index_bn_right.png"></a></div>
+				</div>
 			</div>
 		</div>
 
