메인페이지 작업

--- a/index.html
+++ b/index.html
@@ -114,6 +114,20 @@
 		</div>
 		<!-- visual 끝 -->
 
+		<div class="index_com_info">
+			<div class="container">
+				<div class="index_com_info_t1">압도적인 성과, 고수의 손길</div>
+				<div class="index_com_info_t2">[2020 한국소비자만족지수1위], [2020 대한민국넘버원대상1위] 주식투자컨설팅 부문2관왕!<br/>매일매일 새로운 고수경제TV의 압도적인 수익현황을 확인하세요</div>
+				<ul class="index_com_info_icon">
+					<li class="icon1 ico_gb">업계 최고 수준<br/>고객 만족 실현</li>
+					<li class="icon1 ico_gb">업계 최고 수준<br/>고객 만족 실현</li>
+					<li class="icon1 ico_gb">업계 최고 수준<br/>고객 만족 실현</li>
+					<li class="icon1 ico_gb">업계 최고 수준<br/>고객 만족 실현</li>
+				</ul>
+				<a href="#"><div class="index_com_info_btn">회사소개 바로가기</div></a>
+			</div>
+		</div>
+
 		<div class="photo_list">
 			<div class="container">
 				수익인증
@@ -126,7 +140,7 @@
 					<div class="index_form_l_t1">주식의 절대 고수와 함께하는</div>
 					<div class="index_form_l_t2">급등 유망주<br/>무료 체험 신청하기</div>
 					<div class="index_form_l_t3">압도적인 정보 분석, 조건 없는 무료 체험,<br/>고수경제TV의 무한한 수익 경험을 체감해보세요!</div>
-					<button class="btn-2">Button 2</button>
+					
 
 				</div>
 				<div class="index_form_r">
