버튼 애니메이션 추가작업

--- a/index.html
+++ b/index.html
@@ -21,6 +21,9 @@
 	<!-- Magnific Popup core CSS file -->
 	<link rel="stylesheet" href="plugin/magnific-popup/magnific-popup.css">
 
+	<link href="css/demo-page.css" rel="stylesheet" media="all">
+	<link href="css/hover.css" rel="stylesheet" media="all">
+
 </head>
 <body>
 	<div id="warp" >
@@ -124,7 +127,9 @@
 					<li class="icon1 ico_gb">업계 최고 수준<br/>고객 만족 실현</li>
 					<li class="icon1 ico_gb">업계 최고 수준<br/>고객 만족 실현</li>
 				</ul>
-				<a href="#"><div class="index_com_info_btn">회사소개 바로가기</div></a>
+				<div class="index_com_info_btn">
+				<a href="#" class="hvr-bounce-to-bottom">회사소개 바로가기</a>
+				</div>
 			</div>
 		</div>
 
