--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
 	<!-- silder -->	
 	<!-- <link rel="stylesheet" href="css/swiper_layout.css"> -->
 	
-	<link rel="stylesheet" href="plugin/swiper/dist/css/swiper.css">
+	<!--<link rel="stylesheet" href="plugin/swiper/dist/css/swiper.css">-->
+	<link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.css" />
 	<!-- animate -->
 	<link rel="stylesheet" href="css/animate.min.css">
 	<!-- popup -->
@@ -128,14 +129,28 @@
 					<li class="icon1 ico_gb">업계 최고 수준<br/>고객 만족 실현</li>
 				</ul>
 				<div class="index_com_info_btn">
-				<a href="#" class="hvr-bounce-to-bottom">회사소개 바로가기</a>
+					<a href="#" class="hvr-bounce-to-bottom darkbtn">회사소개 바로가기</a>
 				</div>
+			</div>
+		</div>
+
+		<div class="top5_list">
+			<div class="container">
+				<div class="top_title">수익률 TOP5</div>
 			</div>
 		</div>
 
 		<div class="photo_list">
 			<div class="container">
-				수익인증
+				애널리스트 소개
+			</div>
+		</div>
+
+
+		<div class="photo_list">
+			<div class="container">
+				<div class="top_title">일일 수익 인증 현황</div>
+				<div class="img"><div class="scale"><img src="images/photo_list_img1.png"></div></div>
 			</div>
 		</div>
 
@@ -145,17 +160,40 @@
 					<div class="index_form_l_t1">주식의 절대 고수와 함께하는</div>
 					<div class="index_form_l_t2">급등 유망주<br/>무료 체험 신청하기</div>
 					<div class="index_form_l_t3">압도적인 정보 분석, 조건 없는 무료 체험,<br/>고수경제TV의 무한한 수익 경험을 체감해보세요!</div>
-					
+					<div class="index_form_l_btn">
+						<a href="#" class="hvr-bounce-to-bottom wwhitebtn">무료체험 더보기</a>
+					</div>
 
 				</div>
 				<div class="index_form_r">
-aa
+					ㅁㅁㅁ
+
 				</div>
 			</div>
 		</div>
 
 		<div class="banner_slide">
 			<div class="container">
+				<!-- Swiper -->
+				<div class="swiper-container">
+					<div class="swiper-wrapper">
+					<div class="swiper-slide">Slide 1</div>
+					<div class="swiper-slide">Slide 2</div>
+					<div class="swiper-slide">Slide 3</div>
+					<div class="swiper-slide">Slide 4</div>
+					<div class="swiper-slide">Slide 5</div>
+					<div class="swiper-slide">Slide 6</div>
+					<div class="swiper-slide">Slide 7</div>
+					<div class="swiper-slide">Slide 8</div>
+					<div class="swiper-slide">Slide 9</div>
+					<div class="swiper-slide">Slide 10</div>
+					</div>
+					<!-- Add Pagination -->
+					<div class="swiper-pagination"></div>
+					<!-- Add Arrows -->
+					<div class="swiper-button-next"></div>
+					<div class="swiper-button-prev"></div>
+				</div>
 				<ul class="slide_banner">
 					<li><a href="#"><img src="images/index_bn_img1.png"></a></li>
 					<li><a href="#"><img src="images/index_bn_img2.png"></a></li>
@@ -235,8 +273,10 @@ aa
 <!-- scroll -->
 <script src="plugin/scrolla/scrolla.jquery.min.js"></script>
 <!-- silder -->
-<script src="plugin/swiper/dist/js/swiper.ani.js"></script>
-<script src="plugin/swiper/dist/js/swiper.min.js"></script>
+
+
+<script src="https://unpkg.com/swiper/swiper-bundle.js"></script>
+<script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
 <!-- Magnific Popup core JS file -->
 <script src="plugin/magnific-popup/jquery.magnific-popup.js"></script>
 <script src="js/jquery.DB_naviFullWideMove.min.js"></script>
