swiper 플러그인 로컬작업

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 	
 	<!--<link rel="stylesheet" href="plugin/swiper/dist/css/swiper.css">-->
 	<!-- Link Swiper's CSS -->
-	<link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.css">
+	<link rel="stylesheet" href="css/swiper-bundle.css">
 	<!-- animate -->
 	<link rel="stylesheet" href="css/animate.min.css">
 	<!-- popup -->
@@ -312,14 +312,10 @@
 <!-- scroll -->
 <script src="plugin/scrolla/scrolla.jquery.min.js"></script>
 <!-- silder -->
-
-
-
-<script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
+<script src="js/swiper-bundle.min.js"></script>
 <!-- Magnific Popup core JS file -->
 <script src="plugin/magnific-popup/jquery.magnific-popup.js"></script>
 <script src="js/jquery.DB_naviFullWideMove.min.js"></script>
-
 
 <script src="js/main.js"></script>
 
