배너부분 슬라이드 작업

--- a/index.html
+++ b/index.html
@@ -207,29 +207,26 @@
 					</div>
 				</div>
 			</div>
-		</div>
+		</div> 
 
 		<div class="banner_slide">
 			<div class="container">
-				<div class="swiper-container">
-					<div class="swiper-wrapper">
-					  <div class="swiper-slide">Slide 1</div>
-					  <div class="swiper-slide">Slide 2</div>
-					  <div class="swiper-slide">Slide 3</div>
-					  <div class="swiper-slide">Slide 4</div>
-					  <div class="swiper-slide">Slide 5</div>
-					  <div class="swiper-slide">Slide 6</div>
-					  <div class="swiper-slide">Slide 7</div>
-					  <div class="swiper-slide">Slide 8</div>
-					  <div class="swiper-slide">Slide 9</div>
-					  <div class="swiper-slide">Slide 10</div>
+				<div >
+					<div class="swiper-container_banner swiper_position_b" >
+						<div class="swiper-wrapper">
+						<div class="swiper-slide"><a href="#"><img src="images/index_bn_img1.png"></a></div>
+						<div class="swiper-slide"><a href="#"><img src="images/index_bn_img2.png"></a></div>
+						<div class="swiper-slide"><a href="#"><img src="images/index_bn_img3.png"></a></div>
+						<div class="swiper-slide"><a href="#"><img src="images/index_bn_img4.png"></a></div>
+						<div class="swiper-slide"><a href="#"><img src="images/index_bn_img5.png"></a></div>
+						<div class="swiper-slide"><a href="#"><img src="images/index_bn_img6.png"></a></div>
+						<div class="swiper-slide"><a href="#"><img src="images/index_bn_img7.png"></a></div>
+						</div>
 					</div>
-					<!-- Add Pagination -->
-					<div class="swiper-pagination"></div>
 					<!-- Add Arrows -->
-					<div class="swiper-button-next"></div>
-					<div class="swiper-button-prev"></div>
-				  </div>
+					<div class="swiper-button-next top_110"></div>
+					<div class="swiper-button-prev top_110"></div>
+				</div>
 
 
 				<!--<ul class="slide_banner">
@@ -246,7 +243,9 @@
 					<div class="index_bn_right"><a href="#"><img src="images/index_bn_right.png"></a></div>
 				</div>
 			-->
+				
 			</div>
+
 		</div>
 
 		<div class="googlemaps">
@@ -319,3 +318,9 @@
 
 <script src="js/main.js"></script>
 
+
+
+  <!-- Initialize Swiper -->
+  <script>
+
+  </script>
