수익인증현황

--- a/index.html
+++ b/index.html
@@ -138,6 +138,8 @@
 		<div class="top5_list">
 			<div class="container">
 				<div class="top_title">수익률 TOP5</div>
+
+				
 			</div>
 		</div>
 
@@ -151,7 +153,23 @@
 		<div class="photo_list">
 			<div class="container">
 				<div class="top_title">일일 수익 인증 현황</div>
-				<div class="img"><div class="scale"><img src="images/photo_list_img1.png"></div></div>
+				<div>
+					<div class="swiper-container_photo swiper_position_p" >
+						<div class="swiper-wrapper">
+						<div class="swiper-slide"><div class="photo_border" onmouseenter="zoomIn(event)" onmouseleave="zoomOut(event)"><a href="#"><img src="images/test_img.png"></a></div></div>
+						<div class="swiper-slide"><div class="photo_border" onmouseenter="zoomIn(event)" onmouseleave="zoomOut(event)"><a href="#"><img src="images/test_img.png"></a></div></div>
+						<div class="swiper-slide"><div class="photo_border" onmouseenter="zoomIn(event)" onmouseleave="zoomOut(event)"><a href="#"><img src="images/test_img.png"></a></div></div>
+						<div class="swiper-slide"><div class="photo_border" onmouseenter="zoomIn(event)" onmouseleave="zoomOut(event)"><a href="#"><img src="images/test_img.png"></a></div></div>
+						<div class="swiper-slide"><div class="photo_border" onmouseenter="zoomIn(event)" onmouseleave="zoomOut(event)"><a href="#"><img src="images/test_img.png"></a></div></div>
+						<div class="swiper-slide"><div class="photo_border" onmouseenter="zoomIn(event)" onmouseleave="zoomOut(event)"><a href="#"><img src="images/test_img.png"></a></div></div>
+
+						</div>
+					</div>
+				</div>
+				<div class="photo_list_btn">
+					<a href="#" class="hvr-bounce-to-bottom darkbtn">수익 인증 바로가기</a>
+				</div>
+	
 			</div>
 		</div>
 
@@ -211,7 +229,7 @@
 
 		<div class="banner_slide">
 			<div class="container">
-				<div >
+				<div>
 					<div class="swiper-container_banner swiper_position_b" >
 						<div class="swiper-wrapper">
 						<div class="swiper-slide"><a href="#"><img src="images/index_bn_img1.png"></a></div>
