--- a/index.html
+++ b/index.html
@@ -462,9 +462,47 @@
 			</div>
 		</div>
 
-		<div class="photo_list">
+		<div class="analy_list">
 			<div class="container">
-				애널리스트 소개
+				
+				<div class="ana_slidebox">
+					<div class="ana_photo index_analy1">
+						<div class="ana_info1">
+							<div class="analy_txt3">차고수</div>
+							<div class="analy_txt4">대표애널리스트</div>
+							<div class="analy_txt5">돈을 지켜야 기회가 온다!<br/>중요가격론 파동매매로 단기스윙 및 스켈핑 매매!<br/>수급분석을 통한 단기 급등주 포착</div>
+							<ul class="analy_info_ul">
+								<li>#우량저평가주</li>
+								<li>#가치주집중리딩</li>
+							</ul>
+						</div>
+					</div>
+					<div class="w840">
+						<div class="ana_info">
+							<div class="analy_txt1">Gosu TV Analyst</div>
+							<div class="analy_txt2">국내 최고의 애널리스트들이 모여 구성된 고수경제TV의 분석력과
+							<br/>최상의 고급 정보를 통해 새로운 수익률의 경험을 체험해보세요
+							</div>
+							<div class="analy_btn"><a href="#" class="hvr-bounce-to-bottom darkbtn">전문가소개 바로가기</a></div>
+						</div>
+						<table class="ana_table">
+							<tr>
+								<td>
+									<div class="ana_history">
+										/ 前 G 투자그룹 대표 전문가<br/>
+										/ 前 S 투자그룹 대표 전문가<br/>
+										/ 前 I사 자산운용 전력기획<br/>
+										/ 前 B 투자그룹 대표 전문가<br/>
+										/ 前 K 투자그룹 대표 전문가<br/>
+										/ 現 고수경제TV 대표 전문가
+									</div>
+								</td>
+							</tr>
+						</table>
+					</div>
+
+				</div>
+
 			</div>
 		</div>
 
@@ -629,6 +667,7 @@
 <script src="js/jquery.min.js"></script>
 
 <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
+<script src="https://code.jquery.com/jquery-migrate-3.3.2.min.js" integrity="sha256-Ap4KLoCf1rXb52q+i3p0k2vjBsmownyBTE1EqlRiMwA=" crossorigin="anonymous"></script>
 <!-- animation -->
 <script src="js/scrolla.jquery.min.js"></script>
 <!-- scroll -->
