유튜브 작업

--- a/index.html
+++ b/index.html
@@ -114,20 +114,34 @@
 		
 
 		<!-- visual  -->
-		<div class="content_main">
+		<div class="youtube_main">
 			<div class="container">
-				<div class="ana_info1">
-					<div class="analy_txt3">차고수</div>
-					<div class="analy_txt4">대표애널리스트</div>
-					<div class="analy_txt5">돈을 지켜야 기회가 온다!<br/>중요가격론 파동매매로 단기스윙 및 스켈핑 매매!<br/>수급분석을 통한 단기 급등주 포착</div>
-					<ul class="analy_info_ul">
-						<li>#우량저평가주</li>
-						<li>#가치주집중리딩</li>
-					</ul>
-				</div>
-				
-				<div class="index_video">
-					영상들어가는부분
+				<div class="youtube_contaiter">
+					<div class="youtube_info">
+						<div class="youtube_info_txt1">주식고수가 알려주는 쉽고 빠른</div>
+						<div class="youtube_info_txt2">데일리<br/>종목분석</div>
+						<div class="youtube_info_txt3">주식의 고수가 알려주는 쉽고 빠른 일일 주식<br/>트렌드 현황! 폭 넓은 컨텐츠 제공으로<br/>투자자 여러분들의 고수익을 이끌어가겠습니다.</div>
+						<div class="youtube_info_btn"><a href="#" class="hvr-bounce-to-bottom darkbtn">CH고수TV 바로가기</a></div>
+						<div class="youtube-nav">
+							<div class="you_left"><span></span></div>
+							<div class="youtube_number">0/1</div>
+							<div class="you_right"><span></span></div>			
+						</div>
+					</div>
+					
+					<div class="index_video">
+						<!-- Swiper -->
+						<div class="youtube-container">
+							<div class="swiper-wrapper">
+							<div class="swiper-slide"><iframe width="770" height="445" src="https://www.youtube.com/embed/D2_8C9pcoBk" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
+							<div class="swiper-slide"><iframe width="770" height="445" src="https://www.youtube.com/embed/D2_8C9pcoBk" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
+							<div class="swiper-slide"><iframe width="770" height="445" src="https://www.youtube.com/embed/D2_8C9pcoBk" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
+							<div class="swiper-slide"><iframe width="770" height="445" src="https://www.youtube.com/embed/D2_8C9pcoBk" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
+
+							</div>
+						</div>
+
+					</div>
 				</div>
 			</div>
 		</div>
