--- a/index.html
+++ b/index.html
@@ -102,11 +102,17 @@
 		
 		<!-- visual  -->
 		<div class="visual">
-			<div class="visual_img1">
-
-			</div>
+			<div class="visual_img1"></div>
 			<div class="container">
-				비주얼
+				<div class="text_box">
+					<div class="visual_txt1">진짜 고수들만 모인 최강 투자그룹</div>
+					<div class="visual_txt2">고수경제TV를<br/>만나보세요!</div>
+					<div class="visual_txt3">주식의 고수가 알려주는 쉽고 빠른 일일 주식 트렌드 현황!<br/>폭 넓은 컨텐츠 제공으로 투자자 여러분들의 고수익을 이끌어가겠습니다.</div>
+					<div class="visual_btn">
+						<a href="#" class="hvr-bounce-to-bottom wwhitebtn">회사소개 바로가기 </a>
+					</div>
+				</div>
+				<div class="promo_obj"><img src="images/promo_obj.png" alt=""/></div>
 			</div>
 		</div>
 		<!-- visual 끝 -->
