--- a/index.html
+++ b/index.html
@@ -105,30 +105,49 @@
 			<div class="visual_img1"></div>
 			<div class="container">
 				<div class="text_box">
-					<div class="visual_txt1">진짜 고수들만 모인 최강 투자그룹</div>
-					<div class="visual_txt2">고수경제TV를<br/>만나보세요!</div>
-					<div class="visual_txt3">주식의 고수가 알려주는 쉽고 빠른 일일 주식 트렌드 현황!<br/>폭 넓은 컨텐츠 제공으로 투자자 여러분들의 고수익을 이끌어가겠습니다.</div>
-					<div class="visual_btn">
+					<div class="visual_txt1 animate" data-animate="bounceInDown" data-duration="1s" data-delay="0.1s">진짜 고수들만 모인 최강 투자그룹</div>
+					<div class="visual_txt2 animate" data-animate="bounceInLeft" data-duration="1.5s" data-delay="0.3s">고수경제TV를<br/>만나보세요!</div>
+					<div class="visual_txt3 animate" data-animate="bounceInUp" data-duration="1.5s" data-delay="0.5s">주식의 고수가 알려주는 쉽고 빠른 일일 주식 트렌드 현황!<br/>폭 넓은 컨텐츠 제공으로 투자자 여러분들의 고수익을 이끌어가겠습니다.</div>
+					<div class="visual_btn  animate" data-animate="fadeIn" data-duration="1s" data-delay="1.5s">
 						<a href="#" class="hvr-bounce-to-bottom wwhitebtn">회사소개 바로가기 </a>
 					</div>
 				</div>
-				<div class="promo_obj"><img src="images/promo_obj.png" alt=""/></div>
+				<div class="promo_obj animate" data-animate="flipInX" data-duration="1.2s" data-delay="0.1s"><img src="images/promo_obj.png" alt=""/></div>
+
+				
+				<div class="visual_bottom">
+					<div class="visual_bottom1">수익률 현황</div>
+					<div class="visual_bottom2">
+						<!-- Swiper -->
+						<div class="index_bottom-container">
+							<div class="swiper-wrapper">
+							<div class="swiper-slide"><span class="index_bottom_txt1">엔에스</span><span class="index_bottom_txt2">[217820]</span><span class=" per_up">▲65.2% </span><span class="index_bottom_txt3">수익률 달성</span></div>
+							<div class="swiper-slide">Slide 2</div>
+							</div>
+						</div>
+
+					</div>
+				</div>
+
 			</div>
 		</div>
-		<!-- visual 끝 -->
+
 
 		
+		<!-- visual 끝 -->
+
 
 		<!-- visual  -->
 		<div class="youtube_main">
 			<div class="container">
+			
 				<div class="youtube_contaiter">
 					<div class="youtube_info">
-						<div class="youtube_info_txt1">주식고수가 알려주는 쉽고 빠른</div>
-						<div class="youtube_info_txt2">데일리<br/>종목분석</div>
-						<div class="youtube_info_txt3">주식의 고수가 알려주는 쉽고 빠른 일일 주식<br/>트렌드 현황! 폭 넓은 컨텐츠 제공으로<br/>투자자 여러분들의 고수익을 이끌어가겠습니다.</div>
-						<div class="youtube_info_btn"><a href="#" class="hvr-bounce-to-bottom darkbtn">CH고수TV 바로가기</a></div>
-						<div class="youtube-nav">
+						<div class="youtube_info_txt1 animate" data-animate="bounceInDown" data-duration="1s" data-delay="0.1s">주식고수가 알려주는 쉽고 빠른</div>
+						<div class="youtube_info_txt2 animate" data-animate="bounceInDown" data-duration="1s" data-delay="0.5s">데일리<br/>종목분석</div>
+						<div class="youtube_info_txt3 animate" data-animate="bounceInDown" data-duration="1s" data-delay="1s">주식의 고수가 알려주는 쉽고 빠른 일일 주식<br/>트렌드 현황! 폭 넓은 컨텐츠 제공으로<br/>투자자 여러분들의 고수익을 이끌어가겠습니다.</div>
+						<div class="youtube_info_btn animate" data-animate="fadeIn" data-duration="1s" data-delay="1.5s"><a href="#" class="hvr-bounce-to-bottom darkbtn">CH고수TV 바로가기</a></div>
+						<div class="youtube-nav animate" data-animate="fadeIn" data-duration="1s" data-delay="1.5s">
 							<div class="you_left"><span></span></div>
 							<div class="youtube_number">0/1</div>
 							<div class="you_right"><span></span></div>			
@@ -139,9 +158,8 @@
 						<!-- Swiper -->
 						<div class="youtube-container">
 							<div class="swiper-wrapper">
-							<div class="swiper-slide"><iframe width="770" height="445" src="https://www.youtube.com/embed/D2_8C9pcoBk" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
-							<div class="swiper-slide"><iframe width="770" height="445" src="https://www.youtube.com/embed/D2_8C9pcoBk" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
-							<div class="swiper-slide"><iframe width="770" height="445" src="https://www.youtube.com/embed/D2_8C9pcoBk" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
+					-
+								<div class="swiper-slide"><iframe width="770" height="445" src="https://www.youtube.com/embed/D2_8C9pcoBk" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
 							<div class="swiper-slide"><iframe width="770" height="445" src="https://www.youtube.com/embed/D2_8C9pcoBk" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
 
 							</div>
