최적화 수정

--- a/index.html
+++ b/index.html
@@ -535,7 +535,7 @@
 										<input type="checkbox" id="ex_chk3"> 
 										<label for="ex_chk3">마케팅 및 개인정보 제3자 제공동의 (선택)</label><span> [보기]</span>
 								    </div>
-
+원
 								</td>
 
 							</tr>
@@ -547,6 +547,7 @@
 
 		<div class="banner_slide">
 			<div class="container">
+
 				<div class="animate" data-animate="fadeIn" data-duration="1s" data-delay="0.1s">
 					<div class="swiper-container_banner swiper_position_b" >
 						<div class="swiper-wrapper">
@@ -559,9 +560,10 @@
 						<div class="swiper-slide"><a href="#"><img src="images/index_bn_img7.png"></a></div>
 						</div>
 					</div>
-					<!-- Add Arrows -->
-					<div class="swiper-button-next top_110"></div>
-					<div class="swiper-button-prev top_110"></div>
+					<!-- Add Arrows
+					<div class="swiper-button-next1 top_110"></div>
+					<div class="swiper-button-prev1 top_110"></div>
+					-->
 				</div>
 				
 			</div>
@@ -654,8 +656,6 @@
 <script src="plugin/magnific-popup/jquery.magnific-popup.js"></script>
 <script src="js/jquery.DB_naviFullWideMove.min.js"></script>
 
-<script src="https://cdnjs.cloudflare.com/ajax/libs/velocity/1.5.0/velocity.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/velocity/1.5.0/velocity.ui.min.js"></script>
 
 <script src="js/switchmenu_velocity.js"></script>
 
