20210207 비주얼 슬라이더 변경

--- a/index.html
+++ b/index.html
@@ -11,9 +11,6 @@
 	<link rel="stylesheet" type="text/css" href="css/reset.css">
 	<link rel="stylesheet" type="text/css" href="css/main.css">
 	<!-- silder -->	
-	<!-- <link rel="stylesheet" href="css/swiper_layout.css"> -->
-	
-	<!--<link rel="stylesheet" href="plugin/swiper/dist/css/swiper.css">-->
 	<!-- Link Swiper's CSS -->
 	<link rel="stylesheet" href="css/swiper-bundle.css">
 	<!-- animate -->
@@ -29,6 +26,18 @@
 </head>
 <body>
 	<div id="warp" >
+		<div id="ab_navi">
+			<ul class="p_right_banner">
+				<li><img src="images/navi_1.png"></li>
+				<li><img src="images/navi_2.png"></li>
+				<li><img src="images/navi_3.png"></li>
+				<li><img src="images/navi_4.png"></li>
+				<li><img src="images/navi_kakao.png"></li>
+				<li><img src="images/navi_naver.png"></li>
+			</ul>
+
+		</div>
+
 		<!-- 탑 메뉴 -->
 		<div class="top_select">
 			<div class="container">
@@ -99,33 +108,37 @@
 		</div>
 		<!--/nav-->
 
-		
-		<!-- visual  -->
-		<div class="visual">
-			<!-- Swiper -->
-			<div class="indexvisual-container">
-				<div class="swiper-wrapper">
-					<div class="swiper-slide">
-						<div class="visual_img1"></div>
-						<div class="container2">
-							<div class="text_box">
-								<div class="visual_txt1 animate" data-animate="fadeIn" data-duration="1s" data-delay="0.1s">진짜 고수들만 모인 최강 투자그룹</div>
-								<div class="visual_txt2 animate" data-animate="fadeIn" data-duration="1.5s" data-delay="0.3s">고수경제TV를<br/>만나보세요!</div>
-								<div class="visual_txt3 animate" data-animate="fadeIn" data-duration="1.5s" data-delay="0.5s">주식의 고수가 알려주는 쉽고 빠른 일일 주식 트렌드 현황!<br/>폭 넓은 컨텐츠 제공으로 투자자 여러분들의 고수익을 이끌어가겠습니다.</div>
-								<div class="visual_btn  animate" data-animate="fadeIn" data-duration="1s" data-delay="1.5s">
-									<a href="#" class="hvr-bounce-to-right wwhitebtn">회사소개 바로가기 </a>
-								</div>
-							</div>
-							<div class="promo_obj animate" data-animate="flipInX" data-duration="1.2s" data-delay="0.1s"><img src="images/promo_obj.png" alt=""/></div>						
-						</div>
-
-					</div>
-				</div>
+				
+		<div id="d_tab37">
+			<ul class="d_img">
+				<li>
+					<div class="d_bg"><img src="images/index_slide1.png"></div>
+					<div class="d_bg1"><img src="images/promo_obj.png"  class="d_move" data-delay="300" data-left="0"></div>
+					<div class="d_text"><span class="d_move c1" data-delay="500" data-left="0">진짜 고수들만 모인 최강 투자그룹</span></div>
+					<div class="d_text"><span class="d_move c2" data-delay="1000" data-left="0">고수경제TV를<br/>만나보세요!</span></div>
+					<div class="d_text"><span class="d_move c3" data-delay="1500" data-left="0">주식의 고수가 알려주는 쉽고 빠른 일일 주식 트렌드 현황!<br/>폭 넓은 컨텐츠 제공으로 투자자 여러분들의 고수익을 이끌어가겠습니다.</span></div>
+					<div class="d_text"><span class="d_move c4" data-delay="2000" data-left="0"><a href="#" class="hvr-bounce-to-right wwhitebtn">회사소개 바로가기 </a></span></div>
+				</li>
+				<li>
+					<div class="d_bg"><img src="images/index_slide1.png"></div>
+					<div class="d_bg1"><img src="images/promo_obj.png"  class="d_move" data-delay="300" data-left="0"></div>
+					<div class="d_text"><span class="d_move c1" data-delay="500" data-left="0">진짜 고수들만 모인 최강 투자그룹</span></div>
+					<div class="d_text"><span class="d_move c2" data-delay="1000" data-left="0">고수경제TV를<br/>만나보세요!</span></div>
+					<div class="d_text"><span class="d_move c3" data-delay="1500" data-left="0">주식의 고수가 알려주는 쉽고 빠른 일일 주식 트렌드 현황!<br/>폭 넓은 컨텐츠 제공으로 투자자 여러분들의 고수익을 이끌어가겠습니다.</span></div>
+					<div class="d_text"><span class="d_move c4" data-delay="2000" data-left="0"><a href="#" class="hvr-bounce-to-right wwhitebtn">회사소개 바로가기 </a></span></div>
+				</li>
+			</ul>
+			<div class="d_arrow">
+				<span class="d_prev"><img src="images/visual_left.png"></span>
+				<span class="d_next"><img src="images/visual_right.png"></span>
 			</div>
-
-			<div class="visual_left_btn"><img src="images/visual_left.png"/></div>
-			<div class="visual_right_btn"><img src="images/visual_right.png"/></div>
-		</div>		
+			<ul class="d_btn">
+				<li></li>
+				<li></li>
+			</ul>
+		</div>
+		
+		
 		
 
 		<!-- visual  -->
@@ -535,7 +548,7 @@
 										<input type="checkbox" id="ex_chk3"> 
 										<label for="ex_chk3">마케팅 및 개인정보 제3자 제공동의 (선택)</label><span> [보기]</span>
 								    </div>
-원
+
 								</td>
 
 							</tr>
@@ -645,6 +658,8 @@
 
 <!-- js import -->
 <script src="js/jquery.min.js"></script>
+
+<script type="text/javascript" src="http://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"></script><!--easing-->
 <!-- animation -->
 <script src="js/scrolla.jquery.min.js"></script>
 <!-- scroll -->
@@ -655,7 +670,7 @@
 <!-- Magnific Popup core JS file -->
 <script src="plugin/magnific-popup/jquery.magnific-popup.js"></script>
 <script src="js/jquery.DB_naviFullWideMove.min.js"></script>
-
+<script src="js/jquery.d_tabMotionScaleBanner.min.js"></script>
 
 <script src="js/switchmenu_velocity.js"></script>
 
